--- a/src/app/container/header/header.component.html
+++ b/src/app/container/header/header.component.html
@@ -1,5 +1,9 @@
 <div class="dashboard-header">
-    <div class="dashboard-header-right">
-        <div class="avatar"><img src="" alt=""></div>
-    </div>
+	<div class="dashboard-header-left">
+	</div>
+	<div class="dashboard-header-right">
+		<div style="height: 100%; display: flex; justify-content: flex-end; align-items: center;">
+			<a href="" class="button" style="margin: 0; width: auto">Logout</a>
+		</div>
+	</div>
 </div>
