--- a/src/app/container/sidebar/sidebar.component.html
+++ b/src/app/container/sidebar/sidebar.component.html
@@ -2,6 +2,14 @@
     <div class="dashboard-brand">
         <img src="" alt="" class="logo">
     </div>
+    <div class="dashbar-profile">
+        <div class="profile-wrapper">
+            <div>
+                <img src="/assets/img/avatar-male.jpg" alt="" class="avatar is-md is-rounded-full">
+            </div>
+            <p class="profile-description">Admin Name</p>
+        </div>
+    </div>
     <div class="dashboard-menu">
         <a class="dashboard-menu-item" routerLink="/dashboard">
             <span class="icon">
