--- a/src/app/components/user/user-add/user-add.component.html
+++ b/src/app/components/user/user-add/user-add.component.html
@@ -25,7 +25,7 @@
                         <input [(ngModel)]="user.last_name" class="input" type="text" placeholder="Last Name">
                     </div>
                     <div class=" field">
-                        <label class="label">Gender</label><br>
+                        <label class="label">Gender</label>
                         <select name="gender" [(ngModel)]="user.gender">
                             <option value="0">Select gender</option>
                             <option value="1">Male</option>
@@ -33,7 +33,7 @@
                         </select>
                     </div>
 					<div class="field">
-						<label class="label">Role?</label><br>
+						<label class="label">Role?</label>
 						<select name="role" [(ngModel)]="user.role">
 							<option value="2">Business Head</option>
 							<option value="3">Area Manager</option>
