edit: user: Fixed bug, gender update not working

--- a/src/app/components/user/user-edit/user-edit.component.html
+++ b/src/app/components/user/user-edit/user-edit.component.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class=" field">
                         <label class="label">Gender</label><br>
-                        <select name="gender" ng-model="user.gender">
+                        <select name="gender" [(ngModel)]="user.gender">
                             <option value="1">Male</option>
                             <option value="2">Female</option>
                         </select>
