users-index: user: Created new component and refactored the user table

--- a/src/app/components/project/project-team/project-team.component.html
+++ b/src/app/components/project/project-team/project-team.component.html
@@ -15,52 +15,7 @@
         </div>
 
         <div class="dashboard-content">
-        	<table class="table has-alternate-bg">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Gender</th>
-                <th>Phone</th>
-                <th>Email</th>
-                <th>Role</th>
-                <th>Created At</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let u of users">
-                <td><a routerLink="{{'/user/' + u.id +'/show'}}">{{ u.id }}</a></td>
-                <td>{{ u.first_name }}</td>
-                <td>{{ u.last_name }}</td>
-                <td>{{ u.gender }}</td>
-                <td>{{ u.phone }}</td>
-                <td>{{ u.email }}</td>
-                <td>{{ roleText(u.role) }}</td>
-                <td>{{ u.created_at }}</td>
-                <td><a routerLink="{{ '/user/' + u.id + '/edit' }}">Edit</a></td>
-              </tr>
-              
-            </tbody>
-          </table>
-          <div style="margin-top: 1rem;">
-            <div class="pagination">
-              <a href="" class="pagination-prev">
-                <span class="icon">
-                  <i class="ri-arrow-left-line"></i>
-                </span>
-              </a>
-              <a href="" class="pagination-page">
-                <span>1</span>
-              </a>
-              <a href="" class="pagination-next">
-                <span class="icon">
-                  <i class="ri-arrow-right-line"></i>
-                </span>
-              </a>
-            </div>
-          </div>
+        	<app-users-index [userList]="users"></app-users-index>
         </div>
       </div>
 
