--- a/src/app/components/payment/payment-show/payment-show.component.html
+++ b/src/app/components/payment/payment-show/payment-show.component.html
@@ -47,60 +47,10 @@
 							<a routerLink="/project/add" class="button is-primary">New project</a>
 						</div>
 					</div>
-					<table class="table has-alternate-bg">
-						<tbody>
-							<tr>
-								<th>ID</th>
-								<td>1</td>
-							</tr>
-							<tr>
-								<th>Title</th>
-								<td>Test</td>
-							</tr>
-							<tr>
-								<th>Revenue</th>
-								<td>User</td>
-							</tr>
-							<tr>
-								<th>Tax</th>
-								<td>2,00,000</td>
-							</tr>
-							<tr>
-								<th>Net Revenue</th>
-								<td>User</td>
-							</tr>
-							<tr>
-								<th>Commission Amount</th>
-								<td>50000</td>
-							</tr>
-							<tr>
-								<th>Paid Amount</th>
-								<td>3,00,000</td>
-							</tr>
-							<tr>
-								<th>Client</th>
-								<td>User</td>
-							</tr>
-							<tr>
-								<th>Created at</th>
-								<td>22.o4.2021</td>
-							</tr>
-						</tbody>
-					</table>
-					<div>
-						<div class="pagination is-fullwidth">
-							<a href="" class="pagination-prev">
-								<span class="icon">
-									<i class="ri-arrow-left-line"></i>
-								</span>
-							</a>
-							<a href="" class="pagination-next">
-								<span class="icon">
-									<i class="ri-arrow-right-line"></i>
-								</span>
-							</a>
-						</div>
-					</div>
+					
+					<app-project-single *ngIf="project; else elseBlock" [project]="project"></app-project-single>
+					<ng-template #elseBlock>No project found</ng-template>
+
 				</div>
 
 
@@ -111,38 +61,9 @@
 							<a routerLink="/user/add" class="button is-primary">New user</a>
 						</div>
 					</div>
-					<table class="table has-alternate-bg">
-						<tbody>
-							<tr>
-								<th>ID</th>
-								<td>1</td>
-							</tr>
-							<tr>
-								<th>Avatar</th>
-								<td><img src="" alt=""></td>
-							</tr>
-							<tr>
-								<th>Full Name</th>
-								<td>Aman Kumar</td>
-							</tr>
-							<tr>
-								<th>Gender</th>
-								<td>M</td>
-							</tr>
-							<tr>
-								<th>Mobile No</th>
-								<td>1234567890</td>
-							</tr>
-							<tr>
-								<th>Email Address</th>
-								<td>Aman@gmail.com</td>
-							</tr>
-							<tr>
-								<th>Created at</th>
-								<td>22.04.2021</td>
-							</tr>
-						</tbody>
-					</table>
+
+					<app-user-single [user]="user"></app-user-single>
+
 					<div>
 						<div class="pagination is-fullwidth">
 							<a href="" class="pagination-prev">
