--- a/src/app/components/project/project-show/project-show.component.html
+++ b/src/app/components/project/project-show/project-show.component.html
@@ -16,52 +16,9 @@
         </div>
 
         <div class="dashboard-content">
-          <table class="table has-alternate-bg">
-            <tbody>
-              <tr>
-                <th>ID</th>
-                <td>{{ project.id }}</td>
-              </tr>
-              <tr>
-                <th>Project Name</th>
-                <td>{{ project.title }}</td>
-              </tr>
-              <tr>
-                <th>Revenue</th>
-                <td>{{ project.revenue }}</td>
-              </tr>
-              <tr>
-                <th>Tax</th>
-                <td>{{ project.tax }}</td>
-              </tr>
-              <tr>
-                <th>Net Revenue</th>
-                <td>{{ project.net_revenue }}</td>
-              </tr>
-              <tr>
-                <th>Commission Rate</th>
-                <td>{{ project.commission_rate }}</td>
-              </tr>
-              <tr>
-                <th>Commission amount</th>
-                <td>{{ project.commission_amount }}</td>
-              </tr>
-              <tr>
-                <th>Client</th>
-                <td>{{ project.client_id }}</td>
-              </tr>
-              <tr>
-                <th>Comm. Paid</th>
-                <td>{{ project.paid_amount }}</td>
-              </tr>
-              <tr>
-                <th>Created at</th>
-                <td>{{ project.created_at }}</td>
-              </tr>
-              
-              
-            </tbody>
-          </table>
+          
+          <app-project-single [project]="project"></app-project-single>
+          
           <div class="payment-show">
             <div class="payment-title">
               <h1>Payments</h1>
@@ -69,42 +26,7 @@
                 <a href="" class="button is-primary">New</a>
               </div>
             </div>
-            <div *ngIf="payments.length; else elseBlock">
-              <table class="table has-alternate-bg">
-                <thead>
-                  <tr>
-                    <th>ID</th>
-                    <th>Amount</th>
-                    <th>Project</th>
-                    <th>User</th>
-                    <th>Paid At</th>
-                    <th></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let p of payments">
-                    <td>{{ p.id }}</td>
-                    <td>{{ p.amount }}</td>
-                    <td>{{ p.id }}</td>
-                    <td><a routerLink="{{'/user/'+ p.user_id +'/show'}}"></a>{{ p.user_id }}</td>
-                    <td>{{ p.created_at }}</td>
-                    <td></td>
-                  </tr>
-                </tbody>
-              </table>
-              <div class="pagination is-fullwidth">
-                <a href="" class="pagination-prev">
-                  <span class="icon">
-                    <i class="ri-arrow-left-line"></i>
-                  </span>
-                </a>
-                <a href="" class="pagination-next">
-                  <span class="icon">
-                    <i class="ri-arrow-right-line"></i>
-                  </span>
-                </a>
-              </div>
-            </div>
+            <app-payment-index *ngIf="payments.length; else elseBlock" [paymentList]="payments"> </app-payment-index>
             <ng-template #elseBlock>No payment made yet.</ng-template>
           </div>
         </div>
