--- a/src/app/components/project/project-show/project-show.component.html
+++ b/src/app/components/project/project-show/project-show.component.html
@@ -30,6 +30,9 @@
             <ng-template #elseBlock>No payment made yet.</ng-template>
           </div>
         </div>
+
+        <app-message></app-message>
+      
       </div>
 
     </div>
