--- a/src/app/components/user/user-show/user-show.component.html
+++ b/src/app/components/user/user-show/user-show.component.html
@@ -43,6 +43,8 @@
                 
                 </div>
             </div>
+
+            <app-message></app-message>
         </div>
 
     </div>
