--- a/src/app/components/payment/payment-add/payment-add.component.html
+++ b/src/app/components/payment/payment-add/payment-add.component.html
@@ -78,6 +78,7 @@
 					<label class="label">Amount</label>
 					<input [(ngModel)]="payment.amount" class="input" type="text" placeholder="Amount">
 				</div>
+				<app-message></app-message>
 				<button (click)="create()" class="button" type="button">Create</button>
 
 
