--- a/src/app/components/project/project-add/project-add.component.html
+++ b/src/app/components/project/project-add/project-add.component.html
@@ -49,6 +49,7 @@
                     </select>
                   </div>
                 </div>
+                <app-message></app-message>
                 <button (click)="create()" class="button" type="button">Create</button>
               </div>                
             </div>
