--- a/src/app/components/project/project-edit/project-edit.component.html
+++ b/src/app/components/project/project-edit/project-edit.component.html
@@ -49,6 +49,7 @@
                     </select>
                   </div>
                 </div>
+                <app-message></app-message>
                 <button (click)="update()" class="button" type="button">Update</button>
               </div> 
             </div>
