--- a/src/app/components/project/project-team-build/project-team-build.component.html
+++ b/src/app/components/project/project-team-build/project-team-build.component.html
@@ -119,10 +119,11 @@
 
             </div>
           </div>
+          <app-message></app-message>
 
-              <div>
-                <button (click)="create()" class="button" type="save">Save</button>
-              </div>
+          <div>
+            <button (click)="create()" class="button" type="save">Save</button>
+          </div>
               
 
       </div>
