--- a/src/app/components/user/user-add/user-add.component.html
+++ b/src/app/components/user/user-add/user-add.component.html
@@ -56,6 +56,7 @@
                         <label class="label">Confirm Password</label>
                         <input [(ngModel)]="user.confirm_password" class="input" type="password" placeholder="Confirm Password ">
                     </div>
+                    <app-message></app-message>
                   <button (click)="create()" class="button" type="sign up">Create</button>
                 </div>
               </div>
