--- a/src/app/components/user/user-edit/user-edit.component.html
+++ b/src/app/components/user/user-edit/user-edit.component.html
@@ -47,6 +47,7 @@
                         <label class="label">Confirm Password</label>
                         <input [(ngModel)]="user.confirm_password" class="input" type="password" placeholder="Confirm Password">
                     </div>
+                    <app-message></app-message>
                   <button (click)="update()" class="button" type="button">Update</button>
                 </div>
               </div>
