--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -447,9 +447,9 @@ a:focus, button:focus, select:focus, input:focus {
   padding: 1rem;
   font-size: 1rem;
   border-radius: 0.5rem;
-  width: 100%;
-  max-width: 500px; }
+  width: 100%; }
   .notification.toast-notification {
+    max-width: 500px;
     position: fixed;
     bottom: 2rem;
     right: 2rem;
