Fixing more missing stuff 	modified:   src/app/components/payment/payment-index/payment-index.component.html 	modified:   src/app/components/payment/payment-list/payment-list.component.html 	modified:   src/app/components/payment/payment-show/payment-show.component.html 	modified:   src/app/components/payment/payment-show/payment-show.component.ts 	modified:   src/app/components/user/user-edit/user-edit.component.ts 	modified:   src/app/components/user/user-show/user-show.component.html 	modified:   src/app/components/user/user-show/user-show.component.ts

--- a/src/app/components/payment/payment-index/payment-index.component.html
+++ b/src/app/components/payment/payment-index/payment-index.component.html
@@ -1,32 +1,22 @@
 <table class="table has-alternate-bg">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Project Name</th>
-      <th>Client</th>
-      <th>Revenue</th>
-      <th>Tax</th>
-      <th>Net Revenue</th>
-      <th>Commission</th>
-      <th>Comm. Paid</th>
-      <th>Created At</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let p of paymentList">
-      <td><a routerLink="{{ '/project/'+ p.id +'/show' }}">{{ p.id }}</a></td>
-      <td>{{ p.title }}</td>
-      <td>{{ p.client_id }}</td>
-      <td>{{ p.revenue }}</td>
-      <td>{{ p.tax }}</td>
-      <td>{{ p.net_revenue }}</td>
-      <td>{{ p.commission_amount }}</td>
-      <td>{{ p.commission_paid }}</td>
-      <td>{{ p.created_at }}</td>
-      <td><a routerLink="{{ '/project/'+ p.id +'/edit' }}">Edit</a></td>
-    </tr>
-  </tbody>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Project</th>
+        <th>User</th>
+        <th>Amount</th>
+        <th>Paid at</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let p of paymentList">
+        <td><a routerLink="{{ '/payment/'+ p.id +'/show' }}">{{ p.id }}</a></td>
+        <td>{{ p.project_id }}</td>
+        <td>{{ p.user_id }}</td>
+        <td>{{ p.amount }}</td>
+        <td>{{ p.created_at }}</td>
+      </tr>
+    </tbody>
 </table>
 <div style="margin-top: 1rem;">
   <div class="pagination">
