--- a/src/app/container/sidebar/sidebar.component.html
+++ b/src/app/container/sidebar/sidebar.component.html
@@ -41,5 +41,11 @@
             </span>
             <span>Payments</span>
         </a>
+        <a class="dashboard-menu-item" routerLink="/clients">
+            <span class="icon">
+                <i class="ri-money-dollar-circle-line"></i>
+            </span>
+            <span>Clients</span>
+        </a>
     </div>
 </div>
