sidebar: component: Updated client menu icon

--- a/src/app/container/sidebar/sidebar.component.html
+++ b/src/app/container/sidebar/sidebar.component.html
@@ -43,7 +43,7 @@
         </a>
         <a class="dashboard-menu-item" routerLink="/clients">
             <span class="icon">
-                <i class="ri-money-dollar-circle-line"></i>
+                <i class="ri-user-line"></i>
             </span>
             <span>Clients</span>
         </a>
