login: Working on login system of the application
- currently login, logout and page guard is working perfectly
- some issues need to be solved though:
  - user can land on login component even though he is logged in
  - when logged in user tries to log in again then 302 sent from
    server which is fine but angular throws exception and can not
	redirect user to landing page. View auth service.

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -6,14 +6,16 @@
                 <form action="">
                     <div class="form-row">
                         <div class="field">
-                        <input type="text" class="input" placeholder="Email">
+                        <input #emailInput type="text" class="input" placeholder="Email">
                     </div>
                         <div class="field"> 
-                            <input type="text" class="input" placeholder="Password">
+                            <input #passwordInput type="password" class="input" placeholder="Password">
                         </div>
                     </div>
+
+                    <app-message></app-message>
                     
-                    <button class="button" type="login" routerLink="/dashboard">Login</button>
+                    <button (click)="onLogin(emailInput.value, passwordInput.value)" class="button" type="login">Login</button>
                     <div class="parent1">
                         <div class="child-1 c-1">
                             <label class="checkbox">
