--- a/src/app/container/header/header.component.html
+++ b/src/app/container/header/header.component.html
@@ -3,7 +3,7 @@
 	</div>
 	<div class="dashboard-header-right">
 		<div style="height: 100%; display: flex; justify-content: flex-end; align-items: center;">
-			<a href="" class="button" style="margin: 0; width: auto">Logout</a>
+			<button (click)="onLogout()" class="button" style="margin: 0; width: auto">Logout</button>
 		</div>
 	</div>
 </div>
