sidebar: component: Logged in user name is shown in sidebar

--- a/src/app/container/sidebar/sidebar.component.html
+++ b/src/app/container/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
             <div>
                 <img src="/assets/img/avatar-male.jpg" alt="" class="avatar is-md is-rounded-full">
             </div>
-            <p class="profile-description">Admin Name</p>
+            <p class="profile-description">{{ userFullName() }}</p>
         </div>
     </div>
     <div class="dashboard-menu">
