login: Working on login system (2)
Now most of the work on multi role based auth system has been done
- user/admin can both login
- user/admin can both logout
- user/admin can view and have access the resources that are meant
  to be accessible to authorized user role
- user has limited access to resource
- updated sidebar components to hide from user role
- updated components to hide new/edit button. User are not allowed to
  create or update resource

--- a/src/app/components/payment/payment-list/payment-list.component.html
+++ b/src/app/components/payment/payment-list/payment-list.component.html
@@ -6,7 +6,7 @@
             <div class="dashboard-body-title-wrapper">
                 <div class="dashboard-body-title">
                     <h1>Payments</h1>
-                    <div>
+                    <div *ngIf="authService.isAdmin()">
                         <a routerLink="/payment/add" class="button is-primary">New Payment</a>
                     </div>
                 </div>
