--- a/src/app/components/project/project-show/project-show.component.html
+++ b/src/app/components/project/project-show/project-show.component.html
@@ -10,7 +10,7 @@
               <a routerLink="/projects" class="button is-primary">Back</a>
               <a href="#" class="button is-primary">Tree</a>
               <a routerLink="{{'/project/'+ project_id +'/team'}}" class="button is-primary">Team</a>
-              <a routerLink="/project/team/build" [queryParams]="{project_id: project_id}" class="button is-primary">Build Team</a>
+              <a *ngIf="authService.isAdmin()" routerLink="/project/team/build" [queryParams]="{project_id: project_id}" class="button is-primary">Build Team</a>
             </div>
           </div>
         </div>
@@ -22,7 +22,7 @@
           <div class="payment-show">
             <div class="payment-title">
               <h1>Payments</h1>
-              <div>
+              <div *ngIf="authService.isAdmin()">
                 <a href="" class="button is-primary">New</a>
               </div>
             </div>
