project-team: component: Updated to show Build Team button conditionally
Only admin allowed to see and access build team button and page. This
was forgotten to handle as all the pages were already handled

--- a/src/app/components/project/project-team/project-team.component.html
+++ b/src/app/components/project/project-team/project-team.component.html
@@ -9,7 +9,7 @@
             <div>
               <a (click)="navigateBack()" class="button is-primary">Back</a>
               <a href="#" class="button is-primary">Tree</a>
-              <a routerLink="/project/team/build" [queryParams]="{project_id: project_id}" class="button is-primary">Build Team</a>
+              <a  *ngIf="authService.isAdmin()" routerLink="/project/team/build" [queryParams]="{project_id: project_id}" class="button is-primary">Build Team</a>
             </div>
           </div>
         </div>
